refactor: move framework call filtering into TraceFlowAction at source
- Filter unresolved framework calls (Spring, Jackson) in TraceFlowAction
  rather than retroactively in QuarantineFlowAction
- Remove framework filtering logic from QuarantineFlowAction (now pure policy)
- Move resolvedFrameworkPrefixes from QuarantineConfig to ExtractionConfig
- Embed human-readable descriptions directly in TaskStatus enum
- Fix @SpringBootTest ApplicationContext failure by adding missing
  code2req.extraction.framework-prefixes to test application.properties